--- a/languages/en.json
+++ b/languages/en.json
@@ -96,6 +96,17 @@
             "go_home": "Go Home",
             "details": "Error Details (Development Only)"
         },
+        "plugin": {
+            "not_found": "Plugin page not found",
+            "spell_restriction": "This plugin is restricted to specific server types and cannot be accessed on this server.",
+            "load_failed": "This page could not be loaded or doesn't exist.",
+            "return_to_console": "Return to Server Console",
+            "reload": "Reload Plugin",
+            "reload_title": "Reload Content",
+            "loading_content": "Loading content...",
+            "failed_to_load": "Failed to load content",
+            "retry_loading": "Retry Loading"
+        },
         "global": {}
     },
     "common": {
@@ -123,6 +134,7 @@
         "create": "Create",
         "view": "View",
         "delete": "Delete",
+        "remove": "Remove",
         "next": "Next",
         "previous": "Previous",
         "showing": "Showing {from} - {to} of {total} results",
@@ -725,6 +737,8 @@
             "pterodactylImporter": "Pterodactyl Importer",
             "apiKeys": "API Keys",
             "plugins": "Plugins",
+            "devPlugins": "Dev Plugins",
+            "logViewer": "Log Viewer",
             "marketplace": "Marketplace",
             "cloudManagement": "Cloud Management",
             "knowledgebase": "Knowledge Base",
@@ -3270,6 +3284,12 @@
                 }
             }
         },
+        "feathercloud": {
+            "translations": {
+                "download_coming_soon": "Download functionality will be available when the API is ready",
+                "download_failed": "Failed to download translation"
+            }
+        },
         "cloud_management": {
             "title": "FeatherCloud Cloud Management",
             "subtitle": "Connect your FeatherPanel instance to FeatherCloud using secure credentials",
@@ -3488,20 +3508,29 @@
                     "discord_id": "Discord ID",
                     "generate_sso": "Generate SSO Link"
                 },
+                "actions": {
+                    "title": "Actions",
+                    "sso": {
+                        "title": "Single Sign-On",
+                        "generate": "Generate SSO Link"
+                    }
+                },
                 "servers": {
                     "title": "Servers",
                     "name": "Name",
                     "status": "Status",
                     "created": "Created",
                     "actions": "Actions",
-                    "offline": "Offline"
+                    "offline": "Offline",
+                    "no_servers": "No servers found for this user."
                 },
                 "activities": {
                     "title": "Activities",
                     "name": "Name",
                     "context": "Context",
                     "ip": "IP Address",
-                    "created": "Created At"
+                    "created": "Created At",
+                    "no_activities": "No activity logs found."
                 },
                 "mails": {
                     "title": "Mails",
@@ -3509,7 +3538,8 @@
                     "status": "Status",
                     "created": "Created At",
                     "preview": "Preview",
-                    "actions": "Actions"
+                    "actions": "Actions",
+                    "no_mails": "No mails found."
                 }
             },
             "messages": {
@@ -4028,6 +4058,221 @@
                 }
             }
         },
+        "dev": {
+            "plugins": {
+                "title": "Plugin Manager",
+                "description": "Create and manage FeatherPanel plugins",
+                "search_placeholder": "Search plugins by name, identifier, description, or author...",
+                "loading": "Loading plugins...",
+                "no_results": "No plugins found matching your search",
+                "no_description": "No description available",
+                "resync_symlinks": "Resync Symlinks",
+                "delete": "Delete",
+                "saving": "Saving...",
+                "sdk": {
+                    "title": "SDK Information",
+                    "latest_update": "Latest update",
+                    "update_message": "Plugins now support custom group assignments, allowing for enhanced organization and seamless management."
+                },
+                "actions": {
+                    "refresh": "Refresh",
+                    "create": "Create Plugin"
+                },
+                "empty": {
+                    "title": "No plugins found",
+                    "description": "Create your first plugin to get started"
+                },
+                "dependencies_ok": "Dependencies OK",
+                "dependencies_missing": "Dependencies Missing",
+                "configured": "Configured",
+                "needs_config": "Needs Config",
+                "author": "Author",
+                "messages": {
+                    "fetch_failed": "Failed to fetch plugins",
+                    "settings_saved": "All settings saved successfully",
+                    "settings_save_failed": "Failed to save settings",
+                    "exported": "Plugin {name} exported successfully",
+                    "export_failed": "Failed to export plugin",
+                    "uninstalled": "{name} uninstalled successfully",
+                    "uninstall_failed": "Failed to uninstall plugin",
+                    "symlinks_resynced": "Symlinks resynced successfully for {name}",
+                    "symlinks_resync_failed": "Failed to resync symlinks",
+                    "file_created": "{name} created successfully for {plugin}!",
+                    "file_create_failed": "Failed to create item"
+                },
+                "details": {
+                    "title": "Details",
+                    "info": "Plugin Information",
+                    "identifier": "Identifier",
+                    "version": "Version",
+                    "author": "Author",
+                    "status": "Status",
+                    "flags": "Flags",
+                    "dependencies": "Dependencies",
+                    "no_dependencies": "No dependencies",
+                    "configuration": "Configuration",
+                    "required": "Required",
+                    "save_settings": "Save All Settings",
+                    "no_config_schema": "This plugin doesn't have a configuration schema defined"
+                },
+                "create_action": {
+                    "title": "Create {name}",
+                    "creating": "Creating...",
+                    "file_warning": "Be careful not to upload files containing secrets or sensitive data. Uploaded files may be accessible to others or stored in ways you do not expect."
+                },
+                "uninstall": {
+                    "title": "Delete Plugin",
+                    "description": "Are you sure you want to delete {name}? This action cannot be undone.",
+                    "deleting": "Deleting..."
+                },
+                "create": {
+                    "title": "Create New Plugin",
+                    "basic_info": "Basic Information",
+                    "name": "Name",
+                    "name_help": "Plugin name cannot contain spaces or special characters",
+                    "identifier": "Identifier",
+                    "identifier_help": "Must be unique, lowercase, and contain only letters and numbers",
+                    "description": "Description",
+                    "description_placeholder": "A brief description of what this plugin does...",
+                    "version": "Version",
+                    "target": "Target",
+                    "template": "Template",
+                    "template_help": "Choose the template structure for your plugin",
+                    "authors": "Authors",
+                    "authors_help": "(at least one author, flag, or dependency required)",
+                    "author_placeholder": "Author name",
+                    "add_author": "Add Author",
+                    "flags": "Plugin Flags",
+                    "flags_help": "Note: The hasEvents flag is required and cannot be removed. Plugins need events to register new routes.",
+                    "add_flag": "Add Flag",
+                    "all_flags_added": "All available flags have been added",
+                    "required": "Required",
+                    "dependencies": "Dependencies",
+                    "add_dependency": "Add Dependency",
+                    "config_fields": "Configuration Fields",
+                    "config_field": "Configuration Field",
+                    "add_config_field": "Add Configuration Field",
+                    "field_name": "Field Name",
+                    "display_name": "Display Name",
+                    "field_type": "Field Type",
+                    "default_value": "Default Value",
+                    "default_value_placeholder": "Default value",
+                    "config_description_placeholder": "Describe what this configuration field is used for...",
+                    "validation_regex": "Validation Regex (optional)",
+                    "validation_message": "Validation Message",
+                    "validation_message_placeholder": "Error message for validation",
+                    "required_field": "Required field",
+                    "creating": "Creating...",
+                    "create_plugin": "Create Plugin",
+                    "validation": {
+                        "identifier_name_required": "Identifier and name are required",
+                        "author_flag_dependency_required": "Plugin must have at least one author, flag, or dependency"
+                    },
+                    "messages": {
+                        "created": "Plugin created successfully",
+                        "create_failed": "Failed to create plugin"
+                    },
+                    "dependency_types": {
+                        "php": "PHP Version",
+                        "php_ext": "PHP Extension",
+                        "plugin": "Plugin"
+                    },
+                    "templates": {
+                        "empty": {
+                            "label": "Empty Template",
+                            "description": "Minimal structure with just conf.yml and basic directories"
+                        },
+                        "starter": {
+                            "label": "Starter Template",
+                            "description": "Full template with all example files and documentation"
+                        },
+                        "fresh": {
+                            "label": "Fresh Template",
+                            "description": "Clean template with basic structure and minimal examples"
+                        }
+                    },
+                    "field_types": {
+                        "text": "Text",
+                        "email": "Email",
+                        "url": "URL",
+                        "password": "Password",
+                        "number": "Number",
+                        "boolean": "Boolean"
+                    },
+                    "custom_php_version": "Or enter custom version (e.g., 8.1.5)",
+                    "custom_extension": "Or enter custom extension",
+                    "plugin_identifier": "Plugin identifier"
+                },
+                "edit": {
+                    "title": "Edit Plugin",
+                    "description": "Edit plugin configuration",
+                    "identifier_cannot_change": "Identifier cannot be changed after creation",
+                    "updating": "Updating...",
+                    "update_plugin": "Update Plugin",
+                    "validation": {
+                        "identifier_name_required": "Identifier and name are required",
+                        "author_flag_dependency_required": "Plugin must have at least one author, flag, or dependency"
+                    },
+                    "messages": {
+                        "identifier_required": "Plugin identifier is required",
+                        "load_failed": "Failed to load plugin",
+                        "updated": "Plugin updated successfully",
+                        "update_failed": "Failed to update plugin"
+                    }
+                }
+            },
+            "console": {
+                "title": "Console",
+                "description": "Execute commands on the server",
+                "system_info": "System Information",
+                "system": "System",
+                "runtime": "Runtime",
+                "disk_usage": "Disk Usage",
+                "terminal": "Terminal",
+                "terminal_help": "Use Arrow Up/Down for command history, Ctrl+L to clear",
+                "enter_command": "Enter command...",
+                "executing": "Executing command...",
+                "quick_commands": "Quick Commands",
+                "show_system_info": "Show System Info",
+                "hide_system_info": "Hide System Info",
+                "clear_terminal": "Clear Terminal",
+                "refresh": "Refresh",
+                "messages": {
+                    "fetch_failed": "Failed to fetch system info",
+                    "execute_failed": "Failed to execute command",
+                    "command_failed": "Command failed with exit code {code}"
+                }
+            },
+            "logs": {
+                "title": "Log Viewer",
+                "description": "View and manage application logs",
+                "log_type": "Log Type:",
+                "log_type_app": "App Logs",
+                "log_type_web": "Web Logs",
+                "lines": "Lines:",
+                "logs_output": "Logs Output",
+                "lines_count": "lines",
+                "clear": "Clear",
+                "no_logs": "No logs available",
+                "loading": "Loading logs...",
+                "modified": "Modified:",
+                "actions": {
+                    "refresh": "Refresh",
+                    "auto_refresh": "Auto Refresh",
+                    "stop_auto": "Stop Auto",
+                    "clear_logs": "Clear Logs"
+                },
+                "messages": {
+                    "fetch_failed": "Failed to fetch logs",
+                    "fetch_files_failed": "Failed to fetch log files",
+                    "cleared": "Logs cleared successfully",
+                    "clear_failed": "Failed to clear logs"
+                }
+            },
+            "developerModeRequired": "Developer Mode Required",
+            "developerModeDescription": "Developer mode must be enabled in settings to access developer tools. Please enable it in Admin Settings to continue.",
+            "goToSettings": "Go to Settings"
+        },
         "plugins": {
             "title": "Plugins",
             "description": "Manage installed plugins and their configurations",
@@ -4052,9 +4297,14 @@
                 "empty_description": "No plugins are currently installed on your system.",
                 "version": "Version",
                 "author": "Author",
+                "author_unknown": "Unknown",
+                "no_description": "No description available",
                 "missing_badge": "Missing: {dep}",
                 "config_badge": "Config: {cfg}",
-                "visit_action": "Visit"
+                "visit_action": "Visit",
+                "update_checking": "Checking...",
+                "update_available": "Update Available",
+                "not_loaded": "Not Loaded"
             },
             "drawers": {
                 "config": {
@@ -4062,8 +4312,26 @@
                     "description": "Configure settings for {plugin}",
                     "loading": "Loading plugin configuration...",
                     "settings_title": "Plugin Settings",
+                    "fields_count": "{count} fields",
+                    "required": "Required",
                     "no_schema": "This plugin doesn't have a configuration schema defined",
-                    "no_schema_desc": "The plugin developer needs to add a config section to conf.yml"
+                    "no_schema_desc": "The plugin developer needs to add a config section to conf.yml",
+                    "spell_restrictions": {
+                        "title": "Server Sidebar Spell Restrictions",
+                        "description": "Configure which server types (spells) this plugin should appear on. Leave empty to show on all server types.",
+                        "search_placeholder": "Type to search spells...",
+                        "selected_spells": "Selected Spells",
+                        "selected_count": "{count} selected",
+                        "loading": "Loading spells...",
+                        "no_spells": "No spells found",
+                        "no_spells_search": "Try a different search term",
+                        "selected_badge": "Selected",
+                        "save": "Save Spell Restrictions",
+                        "saving": "Saving...",
+                        "previous": "Previous",
+                        "next": "Next",
+                        "page_info": "Page {current} of {total}"
+                    }
                 },
                 "info": {
                     "sections": {
@@ -4078,6 +4346,10 @@
                 },
                 "install_url": {
                     "title": "Install From URL",
+                    "url_label": "Plugin URL",
+                    "url_placeholder": "https://example.com/plugin.fpa",
+                    "url_description": "Enter the direct URL to a FeatherPanel plugin file (.fpa).",
+                    "security_warning_title": "Security Warning",
                     "warning": "Warning: It is unsafe to install plugins from URLs that are not from the official repository."
                 },
                 "upload": {
@@ -4133,7 +4405,13 @@
                 "save_success": "Settings saved successfully",
                 "save_failed": "Failed to save settings",
                 "reinstall_success": "Plugins reinstalled successfully",
-                "reinstall_failed": "Failed to reinstall plugins"
+                "reinstall_failed": "Failed to reinstall plugins",
+                "spell_restrictions_saved": "Spell restrictions saved successfully",
+                "spell_restrictions_save_failed": "Failed to save spell restrictions",
+                "config_load_failed": "Failed to load full configuration",
+                "spells_load_failed": "Failed to load spells",
+                "up_to_date": "{plugin} is up to date",
+                "update_check_failed": "Failed to check for update"
             }
         },
         "redirect_links": {
